--- a/zotero.bib
+++ b/zotero.bib
@@ -1,4 +1,209 @@
 
+@inproceedings{ngiam_multimodal_2011,
+	address = {Madison, WI, USA},
+	series = {{ICML}'11},
+	title = {Multimodal {Deep} {Learning}},
+	isbn = {978-1-4503-0619-5},
+	abstract = {Deep networks have been successfully applied to unsupervised feature learning for single modalities (e.g., text, images or audio). In this work, we propose a novel application of deep networks to learn features over multiple modalities. We present a series of tasks for multimodal learning and show how to train deep networks that learn features to address these tasks. In particular, we demonstrate cross modality feature learning, where better features for one modality (e.g., video) can be learned if multiple modalities (e.g., audio and video) are present at feature learning time. Furthermore, we show how to learn a shared representation between modalities and evaluate it on a unique task, where the classifier is trained with audio-only data but tested with video-only data and vice-versa. Our models are validated on the CUAVE and AVLetters datasets on audio-visual speech classification, demonstrating best published visual speech classification on AVLetters and effective shared representation learning.},
+	booktitle = {Proceedings of the 28th {International} {Conference} on {International} {Conference} on {Machine} {Learning}},
+	publisher = {Omnipress},
+	author = {Ngiam, Jiquan and Khosla, Aditya and Kim, Mingyu and Nam, Juhan and Lee, Honglak and Ng, Andrew Y.},
+	year = {2011},
+	note = {event-place: Bellevue, Washington, USA},
+	pages = {689--696},
+}
+
+@article{baltrusaitis_multimodal_2019,
+	title = {Multimodal {Machine} {Learning}: {A} {Survey} and {Taxonomy}},
+	volume = {41},
+	issn = {0162-8828, 2160-9292, 1939-3539},
+	shorttitle = {Multimodal {Machine} {Learning}},
+	url = {https://ieeexplore.ieee.org/document/8269806/},
+	doi = {10.1109/TPAMI.2018.2798607},
+	number = {2},
+	urldate = {2023-07-07},
+	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+	author = {Baltrusaitis, Tadas and Ahuja, Chaitanya and Morency, Louis-Philippe},
+	month = feb,
+	year = {2019},
+	pages = {423--443},
+}
+
+@misc{liu_learn_2018,
+	title = {Learn to {Combine} {Modalities} in {Multimodal} {Deep} {Learning}},
+	url = {http://arxiv.org/abs/1805.11730},
+	doi = {10.48550/arXiv.1805.11730},
+	abstract = {Combining complementary information from multiple modalities is intuitively appealing for improving the performance of learning-based approaches. However, it is challenging to fully leverage different modalities due to practical challenges such as varying levels of noise and conflicts between modalities. Existing methods do not adopt a joint approach to capturing synergies between the modalities while simultaneously filtering noise and resolving conflicts on a per sample basis. In this work we propose a novel deep neural network based technique that multiplicatively combines information from different source modalities. Thus the model training process automatically focuses on information from more reliable modalities while reducing emphasis on the less reliable modalities. Furthermore, we propose an extension that multiplicatively combines not only the single-source modalities, but a set of mixtured source modalities to better capture cross-modal signal correlations. We demonstrate the effectiveness of our proposed technique by presenting empirical results on three multimodal classification tasks from different domains. The results show consistent accuracy improvements on all three tasks.},
+	urldate = {2023-07-07},
+	publisher = {arXiv},
+	author = {Liu, Kuan and Li, Yanen and Xu, Ning and Natarajan, Prem},
+	month = may,
+	year = {2018},
+	note = {arXiv:1805.11730 [cs, stat]},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Machine Learning, Statistics - Machine Learning},
+}
+
+@book{ellis_source_1938,
+	address = {London},
+	title = {A source book of {Gestalt} psychology.},
+	url = {http://content.apa.org/books/11496-000},
+	language = {en},
+	urldate = {2023-07-07},
+	publisher = {Kegan Paul, Trench, Trubner \& Company},
+	editor = {Ellis, Willis D.},
+	year = {1938},
+	doi = {10.1037/11496-000},
+}
+
+@article{payeur_burst-dependent_2021,
+	title = {Burst-dependent synaptic plasticity can coordinate learning in hierarchical circuits},
+	volume = {24},
+	issn = {1097-6256, 1546-1726},
+	url = {https://www.nature.com/articles/s41593-021-00857-x},
+	doi = {10.1038/s41593-021-00857-x},
+	language = {en},
+	number = {7},
+	urldate = {2023-07-07},
+	journal = {Nature Neuroscience},
+	author = {Payeur, Alexandre and Guerguiev, Jordan and Zenke, Friedemann and Richards, Blake A. and Naud, Richard},
+	month = jul,
+	year = {2021},
+	pages = {1010--1019},
+}
+
+@article{vogels_inhibitory_2011,
+	title = {Inhibitory {Plasticity} {Balances} {Excitation} and {Inhibition} in {Sensory} {Pathways} and {Memory} {Networks}},
+	volume = {334},
+	issn = {0036-8075, 1095-9203},
+	url = {https://www.science.org/doi/10.1126/science.1211095},
+	doi = {10.1126/science.1211095},
+	abstract = {Plasticity at inhibitory synapses maintains balanced excitatory and inhibitory synaptic inputs at cortical neurons.
+          , 
+            Cortical neurons receive balanced excitatory and inhibitory synaptic currents. Such a balance could be established and maintained in an experience-dependent manner by synaptic plasticity at inhibitory synapses. We show that this mechanism provides an explanation for the sparse firing patterns observed in response to natural stimuli and fits well with a recently observed interaction of excitatory and inhibitory receptive field plasticity. The introduction of inhibitory plasticity in suitable recurrent networks provides a homeostatic mechanism that leads to asynchronous irregular network states. Further, it can accommodate synaptic memories with activity patterns that become indiscernible from the background state but can be reactivated by external stimuli. Our results suggest an essential role of inhibitory plasticity in the formation and maintenance of functional cortical circuitry.},
+	language = {en},
+	number = {6062},
+	urldate = {2023-07-07},
+	journal = {Science},
+	author = {Vogels, T. P. and Sprekeler, H. and Zenke, F. and Clopath, C. and Gerstner, W.},
+	month = dec,
+	year = {2011},
+	pages = {1569--1573},
+}
+
+@article{vogels_inhibitory_2011-1,
+	title = {Inhibitory {Plasticity} {Balances} {Excitation} and {Inhibition} in {Sensory} {Pathways} and {Memory} {Networks}},
+	volume = {334},
+	issn = {0036-8075, 1095-9203},
+	url = {https://www.science.org/doi/10.1126/science.1211095},
+	doi = {10.1126/science.1211095},
+	abstract = {Plasticity at inhibitory synapses maintains balanced excitatory and inhibitory synaptic inputs at cortical neurons.
+          , 
+            Cortical neurons receive balanced excitatory and inhibitory synaptic currents. Such a balance could be established and maintained in an experience-dependent manner by synaptic plasticity at inhibitory synapses. We show that this mechanism provides an explanation for the sparse firing patterns observed in response to natural stimuli and fits well with a recently observed interaction of excitatory and inhibitory receptive field plasticity. The introduction of inhibitory plasticity in suitable recurrent networks provides a homeostatic mechanism that leads to asynchronous irregular network states. Further, it can accommodate synaptic memories with activity patterns that become indiscernible from the background state but can be reactivated by external stimuli. Our results suggest an essential role of inhibitory plasticity in the formation and maintenance of functional cortical circuitry.},
+	language = {en},
+	number = {6062},
+	urldate = {2023-07-07},
+	journal = {Science},
+	author = {Vogels, T. P. and Sprekeler, H. and Zenke, F. and Clopath, C. and Gerstner, W.},
+	month = dec,
+	year = {2011},
+	pages = {1569--1573},
+}
+
+@article{olshausen_emergence_1996,
+	title = {Emergence of simple-cell receptive field properties by learning a sparse code for natural images},
+	volume = {381},
+	issn = {0028-0836, 1476-4687},
+	url = {https://www.nature.com/articles/381607a0},
+	doi = {10.1038/381607a0},
+	language = {en},
+	number = {6583},
+	urldate = {2023-07-07},
+	journal = {Nature},
+	author = {Olshausen, Bruno A. and Field, David J.},
+	month = jun,
+	year = {1996},
+	pages = {607--609},
+}
+
+@book{kandel_principles_2013,
+	address = {New York},
+	edition = {5th ed},
+	title = {Principles of neural science},
+	isbn = {978-0-07-139011-8},
+	abstract = {"The field's definitive work from a Nobel Prize-winning author 900 full-color illustrations Principles of Neural Science, 5e describes our current understanding of how the nerves, brain, and mind function. From molecules to anatomic structures and systems to cognitive function, this comprehensive reference covers all aspects of neuroscience. Widely regarded as the field's cornerstone reference, the fifth edition is highlighted by more than 900 full-color illustrations. The fifth edition has been completely updated to reflect the tremendous amount of new research and development in neuroscience in the last decade. Lead author Eric Kandel was awarded the Nobel Prize in Physiology or Medicine in 2000"--Provided by publisher},
+	publisher = {McGraw-Hill},
+	editor = {Kandel, Eric R.},
+	year = {2013},
+	keywords = {Central Nervous System, Mental Processes, Nervous System Diseases, Neuropsychology, physiology},
+}
+
+@book{marr_vision_2010,
+	title = {Vision: {A} {Computational} {Investigation} into the {Human} {Representation} and {Processing} of {Visual} {Information}},
+	isbn = {978-0-262-28961-0},
+	shorttitle = {Vision},
+	url = {https://direct.mit.edu/books/book/3299},
+	language = {en},
+	urldate = {2023-07-02},
+	publisher = {The MIT Press},
+	author = {Marr, David},
+	year = {2010},
+	doi = {10.7551/mitpress/9780262514620.001.0001},
+}
+
+@inproceedings{tolstikhin_mlp-mixer_2021,
+	title = {{MLP}-{Mixer}: {An} all-{MLP} {Architecture} for {Vision}},
+	volume = {34},
+	url = {https://proceedings.neurips.cc/paper_files/paper/2021/file/cba0a4ee5ccd02fda0fe3f9a3e7b89fe-Paper.pdf},
+	booktitle = {Advances in {Neural} {Information} {Processing} {Systems}},
+	publisher = {Curran Associates, Inc.},
+	author = {Tolstikhin, Ilya O and Houlsby, Neil and Kolesnikov, Alexander and Beyer, Lucas and Zhai, Xiaohua and Unterthiner, Thomas and Yung, Jessica and Steiner, Andreas and Keysers, Daniel and Uszkoreit, Jakob and Lucic, Mario and Dosovitskiy, Alexey},
+	editor = {Ranzato, M. and Beygelzimer, A. and Dauphin, Y. and Liang, P. S. and Vaughan, J. Wortman},
+	year = {2021},
+	pages = {24261--24272},
+}
+
+@article{wagemans_century_2012,
+	title = {A century of {Gestalt} psychology in visual perception: {II}. {Conceptual} and theoretical foundations.},
+	volume = {138},
+	issn = {1939-1455, 0033-2909},
+	shorttitle = {A century of {Gestalt} psychology in visual perception},
+	url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/a0029334},
+	doi = {10.1037/a0029334},
+	language = {en},
+	number = {6},
+	urldate = {2023-07-05},
+	journal = {Psychological Bulletin},
+	author = {Wagemans, Johan and Feldman, Jacob and Gepshtein, Sergei and Kimchi, Ruth and Pomerantz, James R. and Van Der Helm, Peter A. and Van Leeuwen, Cees},
+	year = {2012},
+	pages = {1218--1252},
+}
+
+@book{hamlyn_psychology_2017,
+	edition = {0},
+	title = {The {Psychology} of {Perception}: {A} {Philosophical} {Examination} of {Gestalt} {Theory} and {Derivative} {Theories} of {Perception}},
+	isbn = {978-1-315-47329-1},
+	shorttitle = {The {Psychology} of {Perception}},
+	url = {https://www.taylorfrancis.com/books/9781315473284},
+	language = {en},
+	urldate = {2023-07-05},
+	publisher = {Routledge},
+	author = {Hamlyn, D. W.},
+	month = mar,
+	year = {2017},
+	doi = {10.4324/9781315473291},
+}
+
+@book{kohler_gestalt_1992,
+	address = {New York},
+	title = {Gestalt psychology: an introduction to new concepts in modern psychology},
+	isbn = {978-0-87140-218-9},
+	shorttitle = {Gestalt psychology},
+	publisher = {Liveright},
+	author = {Köhler, Wolfgang},
+	year = {1992},
+	keywords = {Gestalt psychology},
+}
+
 @misc{lau_proximal_2018,
 	title = {A {Proximal} {Block} {Coordinate} {Descent} {Algorithm} for {Deep} {Neural} {Network} {Training}},
 	url = {http://arxiv.org/abs/1803.09082},
@@ -1111,19 +1316,6 @@
 	pages = {47--56},
 }
 
-@book{marr_vision_2010,
-	title = {Vision: {A} {Computational} {Investigation} into the {Human} {Representation} and {Processing} of {Visual} {Information}},
-	isbn = {978-0-262-28961-0},
-	shorttitle = {Vision},
-	url = {https://direct.mit.edu/books/book/3299},
-	language = {en},
-	urldate = {2023-07-02},
-	publisher = {The MIT Press},
-	author = {Marr, David},
-	year = {2010},
-	doi = {10.7551/mitpress/9780262514620.001.0001},
-}
-
 @misc{ahmad_properties_2015,
 	title = {Properties of {Sparse} {Distributed} {Representations} and their {Application} to {Hierarchical} {Temporal} {Memory}},
 	url = {http://arxiv.org/abs/1503.07469},
@@ -1700,7 +1892,7 @@
 	year = {1999},
 }
 
-@article{mountcastle_columnar_1997,
+@article{mountcastle_columnar_1997-1,
 	title = {The columnar organization of the neocortex},
 	volume = {120},
 	issn = {14602156},
@@ -2822,7 +3014,7 @@
 	keywords = {Computer Science - Computation and Language},
 }
 
-@inproceedings{brown_language_2020-1,
+@inproceedings{brown_language_2020,
 	title = {Language {Models} are {Few}-{Shot} {Learners}},
 	volume = {33},
 	url = {https://proceedings.neurips.cc/paper_files/paper/2020/file/1457c0d6bfcb4967418bfb8ac142f64a-Paper.pdf},
