Updates from Overleaf

--- a/zotero.bib
+++ b/zotero.bib
@@ -1,4 +1,166 @@
 
+@inproceedings{rhu_compressing_2018,
+	address = {Vienna},
+	title = {Compressing {DMA} {Engine}: {Leveraging} {Activation} {Sparsity} for {Training} {Deep} {Neural} {Networks}},
+	isbn = {978-1-5386-3659-6},
+	shorttitle = {Compressing {DMA} {Engine}},
+	url = {http://ieeexplore.ieee.org/document/8327000/},
+	doi = {10.1109/HPCA.2018.00017},
+	urldate = {2023-07-08},
+	booktitle = {2018 {IEEE} {International} {Symposium} on {High} {Performance} {Computer} {Architecture} ({HPCA})},
+	publisher = {IEEE},
+	author = {Rhu, Minsoo and O'Connor, Mike and Chatterjee, Niladrish and Pool, Jeff and Kwon, Youngeun and Keckler, Stephen W.},
+	month = feb,
+	year = {2018},
+	pages = {78--91},
+}
+
+@inproceedings{ide_improvement_2017,
+	address = {Anchorage, AK, USA},
+	title = {Improvement of learning for {CNN} with {ReLU} activation by sparse regularization},
+	isbn = {978-1-5090-6182-2},
+	url = {http://ieeexplore.ieee.org/document/7966185/},
+	doi = {10.1109/IJCNN.2017.7966185},
+	urldate = {2023-07-08},
+	booktitle = {2017 {International} {Joint} {Conference} on {Neural} {Networks} ({IJCNN})},
+	publisher = {IEEE},
+	author = {Ide, Hidenori and Kurita, Takio},
+	month = may,
+	year = {2017},
+	pages = {2684--2691},
+}
+
+@article{niu_review_2021,
+	title = {A review on the attention mechanism of deep learning},
+	volume = {452},
+	issn = {09252312},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S092523122100477X},
+	doi = {10.1016/j.neucom.2021.03.091},
+	language = {en},
+	urldate = {2023-07-08},
+	journal = {Neurocomputing},
+	author = {Niu, Zhaoyang and Zhong, Guoqiang and Yu, Hui},
+	month = sep,
+	year = {2021},
+	pages = {48--62},
+}
+
+@article{gilbert_lateral_1990,
+	title = {Lateral {Interactions} in {Visual} {Cortex}},
+	volume = {55},
+	issn = {0091-7451, 1943-4456},
+	url = {http://symposium.cshlp.org/cgi/doi/10.1101/SQB.1990.055.01.063},
+	doi = {10.1101/SQB.1990.055.01.063},
+	language = {en},
+	number = {0},
+	urldate = {2023-07-08},
+	journal = {Cold Spring Harbor Symposia on Quantitative Biology},
+	author = {Gilbert, C.D. and Hirsch, J.A. and Wiesel, T.N.},
+	month = jan,
+	year = {1990},
+	pages = {663--677},
+}
+
+@article{conway_organization_2018,
+	title = {The {Organization} and {Operation} of {Inferior} {Temporal} {Cortex}},
+	volume = {4},
+	issn = {2374-4642, 2374-4650},
+	url = {https://www.annualreviews.org/doi/10.1146/annurev-vision-091517-034202},
+	doi = {10.1146/annurev-vision-091517-034202},
+	abstract = {Inferior temporal cortex (IT) is a key part of the ventral visual pathway implicated in object, face, and scene perception. But how does IT work? Here, I describe an organizational scheme that marries form and function and provides a framework for future research. The scheme consists of a series of stages arranged along the posterior-anterior axis of IT, defined by anatomical connections and functional responses. Each stage comprises a complement of subregions that have a systematic spatial relationship. The organization of each stage is governed by an eccentricity template, and corresponding eccentricity representations across stages are interconnected. Foveal representations take on a role in high-acuity object vision (including face recognition); intermediate representations compute other aspects of object vision such as behavioral valence (using color and surface cues); and peripheral representations encode information about scenes. This multistage, parallel-processing model invokes an innately determined organization refined by visual experience that is consistent with principles of cortical development. The model is also consistent with principles of evolution, which suggest that visual cortex expanded through replication of retinotopic areas. Finally, the model predicts that the most extensively studied network within IT—the face patches—is not unique but rather one manifestation of a canonical set of operations that reveal general principles of how IT works.},
+	language = {en},
+	number = {1},
+	urldate = {2023-07-08},
+	journal = {Annual Review of Vision Science},
+	author = {Conway, Bevil R.},
+	month = sep,
+	year = {2018},
+	pages = {381--402},
+}
+
+@article{miyashita_inferior_1993,
+	title = {Inferior {Temporal} {Cortex}: {Where} {Visual} {Perception} {Meets} {Memory}},
+	volume = {16},
+	issn = {0147-006X, 1545-4126},
+	shorttitle = {Inferior {Temporal} {Cortex}},
+	url = {https://www.annualreviews.org/doi/10.1146/annurev.ne.16.030193.001333},
+	doi = {10.1146/annurev.ne.16.030193.001333},
+	language = {en},
+	number = {1},
+	urldate = {2023-07-08},
+	journal = {Annual Review of Neuroscience},
+	author = {Miyashita, Y},
+	month = mar,
+	year = {1993},
+	pages = {245--263},
+}
+
+@article{tong_primary_2003,
+	title = {Primary visual cortex and visual awareness},
+	volume = {4},
+	issn = {1471-003X, 1471-0048},
+	url = {https://www.nature.com/articles/nrn1055},
+	doi = {10.1038/nrn1055},
+	language = {en},
+	number = {3},
+	urldate = {2023-07-08},
+	journal = {Nature Reviews Neuroscience},
+	author = {Tong, Frank},
+	month = mar,
+	year = {2003},
+	pages = {219--229},
+}
+
+@article{grill-spector_human_2004,
+	title = {{THE} {HUMAN} {VISUAL} {CORTEX}},
+	volume = {27},
+	issn = {0147-006X, 1545-4126},
+	url = {https://www.annualreviews.org/doi/10.1146/annurev.neuro.27.070203.144220},
+	doi = {10.1146/annurev.neuro.27.070203.144220},
+	abstract = {▪ Abstract  The discovery and analysis of cortical visual areas is a major accomplishment of visual neuroscience. In the past decade the use of noninvasive functional imaging, particularly functional magnetic resonance imaging (fMRI), has dramatically increased our detailed knowledge of the functional organization of the human visual cortex and its relation to visual perception. The fMRI method offers a major advantage over other techniques applied in neuroscience by providing a large-scale neuroanatomical perspective that stems from its ability to image the entire brain essentially at once. This bird's eye view has the potential to reveal large-scale principles within the very complex plethora of visual areas. Thus, it could arrange the entire constellation of human visual areas in a unified functional organizational framework. Here we review recent findings and methods employed to uncover the functional properties of the human visual cortex focusing on two themes: functional specialization and hierarchical processing.},
+	language = {en},
+	number = {1},
+	urldate = {2023-07-08},
+	journal = {Annual Review of Neuroscience},
+	author = {Grill-Spector, Kalanit and Malach, Rafael},
+	month = jul,
+	year = {2004},
+	pages = {649--677},
+}
+
+@article{li_interpretable_2022,
+	title = {Interpretable deep learning: interpretation, interpretability, trustworthiness, and beyond},
+	volume = {64},
+	issn = {0219-1377, 0219-3116},
+	shorttitle = {Interpretable deep learning},
+	url = {https://link.springer.com/10.1007/s10115-022-01756-8},
+	doi = {10.1007/s10115-022-01756-8},
+	language = {en},
+	number = {12},
+	urldate = {2023-07-08},
+	journal = {Knowledge and Information Systems},
+	author = {Li, Xuhong and Xiong, Haoyi and Li, Xingjian and Wu, Xuanyu and Zhang, Xiao and Liu, Ji and Bian, Jiang and Dou, Dejing},
+	month = dec,
+	year = {2022},
+	pages = {3197--3234},
+}
+
+@inproceedings{gerasimou_importance-driven_2020,
+	address = {Seoul South Korea},
+	title = {Importance-driven deep learning system testing},
+	isbn = {978-1-4503-7121-6},
+	url = {https://dl.acm.org/doi/10.1145/3377811.3380391},
+	doi = {10.1145/3377811.3380391},
+	language = {en},
+	urldate = {2023-07-08},
+	booktitle = {Proceedings of the {ACM}/{IEEE} 42nd {International} {Conference} on {Software} {Engineering}},
+	publisher = {ACM},
+	author = {Gerasimou, Simos and Eniser, Hasan Ferit and Sen, Alper and Cakan, Alper},
+	month = jun,
+	year = {2020},
+	pages = {702--713},
+}
+
 @inproceedings{ngiam_multimodal_2011,
 	address = {Madison, WI, USA},
 	series = {{ICML}'11},
@@ -2874,7 +3036,7 @@
 	pages = {54--71},
 }
 
-@inproceedings{sahoo_online_2018-1,
+@inproceedings{sahoo_online_2018,
 	address = {Stockholm, Sweden},
 	title = {Online {Deep} {Learning}: {Learning} {Deep} {Neural} {Networks} on the {Fly}},
 	isbn = {978-0-9992411-2-7},
