--- a/main.tex
+++ b/main.tex
@@ -167,7 +167,7 @@
 \input{tex/related_work}
 
 \setchapterpreamble[u]{\margintoc}
-\chapter{Biological Plausible Vision Framework}\chlbl{probabilistic_framework}
+\chapter{Biologically Plausible Vision Framework}\chlbl{probabilistic_framework}
 \input{tex/probabilistic_framework}
 
 \setchapterpreamble[u]{\margintoc}
